--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
     <div class="container">
         <button onclick="typeWriter()">SUBMIT</button>
-        <!-- <input type="text" name="text" id="input"> -->
-        <textarea name="output" id="output" cols="55" rows="7" disabled></textarea>
+        <textarea name="" id="output" ></textarea>
     </div>
 </body>
 
